# sc_judgment_finetune

./: .gitignore  fixed.json  fixed_remaining.json  main.py  pyproject.toml  scjm_ft_phase1.jsonl  scjm_ft_phase1_backup.jsonl  scjm_ft_phase2.jsonl  summaries_finetune.json  test_json.py  test_phase1.jsonl  test_phase2.jsonl
chatbot/: legal_cli_chatbot.py
scripts/: prepare_finetune_jsonl.py  prepare_finetune_phase2.py
